# ROS2-Workspace-CRSA465

./: .gitignore  key  key.pub
CRSA465/: package.xml  setup.cfg  setup.py
CRSA465/CRSA465/: control_node.py  position_goal.py
CRSA465/config/: joint_names_CRS A465 v1 URDF and meshes.yaml  ros2_control.yaml
CRSA465/database/: trajectories.db
CRSA465/launch/: display.launch  display.launch.py  gazebo.launch
CRSA465/meshes/: CORS_server.py  eslabon_1.STL  eslabon_2.STL  eslabon_3.STL  eslabon_4.STL  eslabon_5.STL  eslabon_6.STL  eslabon_base.STL
CRSA465/urdf/: CRSA465.urdf  simple_cube.urdf
src/crsa465_hw_interface/: CMakeLists.txt  package.xml  plugin_description.xml
src/crsa465_hw_interface/include/crsa465_hw_interface/: crsa465_hardware.hpp
src/crsa465_hw_interface/resource/: crsa465_hw_interface
src/crsa465_hw_interface/src/: crsa465_hardware.cpp
src/crsa465_interfaces/: CMakeLists.txt  package.xml
src/crsa465_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/crsa465_moveit_config/config/: CRSA465.ros2_control.xacro  CRSA465.srdf  CRSA465.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/crsa465_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
