<?xml version="1.0"?>
<package format="3">
  <name>crsa465_hw_interface</name>
  <version>0.0.0</version>
  <description>Hardware interface</description>

  <maintainer email="zuck@todo.todo">Zuck</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>crsa465_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
